Corrigido testes com novo campo de responsável